objects/Account.object
<CustomObject>
    <fields>
        <fullName>Partner_Onboarding_Step__c</fullName>
        <inlineHelpText>Steps of prospecting and onboarding new partner accounts</inlineHelpText>
        <label>Partner Onboarding Step</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Identified</fullName>
                    <default>true</default>
                    <label>Identified</label>
                </value>
                <value>
                    <fullName>Step 2</fullName>
                </value>
                <value>
                    <fullName>Step 3</fullName>
                </value>
                <value>
                    <fullName>Step 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picture__c</fullName>
        <label>Picture</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Power_of_One__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Power of One</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_year_1_4_Fmly_loans_originated__c</fullName>
        <label>Previous year 1-4 Fmly loans originated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prime</fullName>
                </value>
                <value>
                    <fullName>Near Prime</fullName>
                </value>
                <value>
                    <fullName>Non Prime</fullName>
                </value>
                <value>
                    <fullName>Conventional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Programs__c</fullName>
        <label>Programs</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Affordable Housing Program</fullName>
                </value>
                <value>
                    <fullName>CRA Program</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ready_for_IM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready for IM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Risks__c</fullName>
        <label>Risks</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Roll_up_of_LOs_Opp__c</fullName>
        <label>Roll up of LOs Opp</label>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Roll_up_of_LOs__c</fullName>
        <label>Roll up of LOs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SNL_ID__c</fullName>
        <label>SNL ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secondary__c</fullName>
        <label>Secondary</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Portfolio</fullName>
                </value>
                <value>
                    <fullName>Corr/Wholesale Partners</fullName>
                </value>
                <value>
                    <fullName>Whole Loan Buyers</fullName>
                </value>
                <value>
                    <fullName>Agency partners</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Securitization__c</fullName>
        <label>Securitization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>yes</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
                <value>
                    <fullName>PLMBS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Spruce_State_License_ID__c</fullName>
        <externalId>true</externalId>
        <label>Spruce State License ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>State_Headquartered__c</fullName>
        <label>State Headquartered</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Territory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Company Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Top_Level_Parent__c</fullName>
        <formula>IF( ISBLANK(ParentId) ,  Id ,   
 IF( ISBLANK( Parent.Parent.Id ) ,  ParentId , 
  IF( ISBLANK( Parent.Parent.Parent.Id ) , Parent.Parent.Id, 
   IF( ISBLANK( Parent.Parent.Parent.Parent.Id ) , Parent.Parent.Parent.Id, 
    IF( ISBLANK( Parent.Parent.Parent.Parent.Parent.Id ) , Parent.Parent.Parent.Parent.Id, 
     IF( ISBLANK( Parent.Parent.Parent.Parent.Parent.Parent.Id ) , Parent.Parent.Parent.Parent.Parent.Id, 
      IF( ISBLANK( Parent.Parent.Parent.Parent.Parent.Parent.Parent.Id ) , Parent.Parent.Parent.Parent.Parent.Parent.Id, 
       IF( ISBLANK( Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Id ) ,  Parent.Parent.Parent.Parent.Parent.Parent.Parent.Id ,
        IF( ISBLANK( Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Id ) ,  Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Id , 
         IF( ISBLANK( Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.ParentId ) , Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Id,  
          IF( ISBLANK(Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.ParentId ) , Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.ParentId ,   Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.ParentId 
          )
         ) 
        ) 
       )
      )
     )
    )
   )
  )
 )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Top Level Parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topics__c</fullName>
        <label>Topics</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Personal Finance</fullName>
                </value>
                <value>
                    <fullName>Real Estate</fullName>
                </value>
                <value>
                    <fullName>Producer/Assignment Editor/Editor</fullName>
                </value>
                <value>
                    <fullName>Demographic</fullName>
                </value>
                <value>
                    <fullName>Lifestyle</fullName>
                </value>
                <value>
                    <fullName>Community</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unison_Product__c</fullName>
        <label>Unison Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HomeOwner</fullName>
                </value>
                <value>
                    <fullName>HomeBuyer</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Update_LOP_Lender__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update LOP Lender</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Value_Prop__c</fullName>
        <label>Value Prop</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Buy More Home</fullName>
                </value>
                <value>
                    <fullName>Lower Monthly Payment</fullName>
                </value>
                <value>
                    <fullName>Reserve Cash</fullName>
                </value>
                <value>
                    <fullName>Qualify</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X5_Down2__c</fullName>
        <formula>Parent.X5_Down__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>5% Down</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X5_Down__c</fullName>
        <defaultValue>false</defaultValue>
        <label>5% Down</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>YTD_1_4_Fmly_Loans_Total_Loans__c</fullName>
        <label>YTD 1-4 Fmly Loans / Total Loans %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>YTD_1_4_Fmly_Loans_originated__c</fullName>
        <label>YTD 1-4 Fmly Loans originated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTD_1_4_fmly_Loans__c</fullName>
        <label>YTD 1-4 fmly Loans</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTD_Liquidity_ratio__c</fullName>
        <label>YTD Liquidity ratio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>YTD_Loan_Growth__c</fullName>
        <label>YTD Loan Growth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>YTD_Total_Assets__c</fullName>
        <label>YTD Total Assets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTD_Total_Loans_Total_Assets__c</fullName>
        <label>YTD Total Loans / Total Assets %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>YTD_Total_Loans__c</fullName>
        <label>YTD Total Loans</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTD_Yield_on_Loans__c</fullName>
        <label>YTD Yield on Loans</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>YTD_Yield_on_RE_Loans_1_4_family__c</fullName>
        <label>YTD Yield on RE Loans: 1-4 family</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>of_Offices_by_state__c</fullName>
        <label># of Offices by state</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_mortgage_Originated__c</fullName>
        <label># of mortgage Originated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>OC/LA Accounts</label>
    </listViews>
    <listViews>
        <fullName>Branches</fullName>
        <columns>PARENT_NAME</columns>
        <columns>Territory__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.EMPLOYEES</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Retail Branch</value>
        </filters>
        <label>Branches</label>
    </listViews>
    <listViews>
        <fullName>Customers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Household</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notContain</operation>
            <value>test</value>
        </filters>
        <label>Customers</label>
    </listViews>
    <listViews>
        <fullName>Lender_Partners</fullName>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Number_of_Salespeople__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Lender</value>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Channel Partner,Third Party Originator</value>
        </filters>
        <label>Lender Partners</label>
    </listViews>
    <listViews>
        <fullName>Lenders</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.EMPLOYEES</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Lender</value>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Channel Partner,Third Party Originator</value>
        </filters>
        <label>Midwest Region</label>
    </listViews>
    <listViews>
        <fullName>Mine</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <label>Mine</label>
    </listViews>
    <listViews>
        <fullName>My_Reverse_Mortgage_Brokers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Reverse Mortgage Brokers</value>
        </filters>
        <label>My Reverse Mortgage Brokers</label>
        <sharedTo>
            <role>Business_Operations</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Reverse_Mortgage_Brokers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Reverse Mortgage Brokers</value>
        </filters>
        <label>Reverse Mortgage Brokers</label>
        <sharedTo>
            <role>Business_Operations</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>San_Diego_Territory_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>San Diego Territory Accounts</label>
    </listViews>
    <listViews>
        <fullName>Vendor_Management</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Vendor_Management</value>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Vendor</value>
        </filters>
        <label>Vendor Management</label>
    </listViews>
    <recordTypes>
        <fullName>Closing_Services_Provider</fullName>
        <active>true</active>
        <label>Closing Services Provider</label>
    </recordTypes>
    <recordTypes>
        <fullName>Depository_Institution</fullName>
        <active>true</active>
        <description>Depository Institution</description>
        <label>Depository Institution</label>
    </recordTypes>
    <recordTypes>
        <fullName>Escrow</fullName>
        <active>true</active>
        <label>Escrow</label>
    </recordTypes>
    <recordTypes>
        <fullName>Household</fullName>
        <active>true</active>
        <description>012E00000002OGX</description>
        <label>Household</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lender</fullName>
        <active>true</active>
        <description>012E00000002OGh</description>
        <label>Lender</label>
    </recordTypes>
    <recordTypes>
        <fullName>Loan_Investor</fullName>
        <active>true</active>
        <description>Loan Investor</description>
        <label>Loan Investor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Public_Relations</fullName>
        <active>true</active>
        <description>012E000000066zX</description>
        <label>Public Relations</label>
    </recordTypes>
    <recordTypes>
        <fullName>Real_Estate_Broker</fullName>
        <active>true</active>
        <description>012E00000002OGc</description>
        <label>Real Estate Broker</label>
    </recordTypes>
    <recordTypes>
        <fullName>Retail_Branch</fullName>
        <active>true</active>
        <description>01244000000DK3a</description>
        <label>Retail Branch</label>
    </recordTypes>
    <recordTypes>
        <fullName>Title</fullName>
        <active>true</active>
        <label>Title</label>
    </recordTypes>
    <recordTypes>
        <fullName>Title_Company</fullName>
        <active>true</active>
        <description>01211000000BOHx</description>
        <label>Title Company</label>
    </recordTypes>
    <recordTypes>
        <fullName>Trustee</fullName>
        <active>true</active>
        <label>Trustee</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vendor_Management</fullName>
        <active>true</active>
        <description>01244000000DH5S</description>
        <label>Vendor Management</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Address_is_Required</fullName>
        <active>false</active>
        <errorConditionFormula>OR ( 
ISBLANK( BillingStreet ), 
ISBLANK(BillingCity), 
ISBLANK( BillingState ),
ISBLANK( BillingPostalCode ),
ISBLANK(BillingCountry))</errorConditionFormula>
        <errorDisplayField>BillingStreet</errorDisplayField>
        <errorMessage>Address is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FivePercent_Down_Jumbo_Conforming</fullName>
        <active>false</active>
        <errorConditionFormula>OR(
ISCHANGED( Jumbo__c ),
 ISCHANGED(  X5_Down__c ), 
 ISCHANGED(  Conforming__c  ) 
)</errorConditionFormula>
        <errorMessage>Checkboxes cannot be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_SysAdmin_can_Edit</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
not(isnew()),
Only_SysAdmin_Can_Edit__c = true,
$Profile.Name &lt;&gt; "System Administrator"
)</errorConditionFormula>
        <errorMessage>Only System Administrators users can edit this Account</errorMessage>
    </validationRules>
</CustomObject>